force-app/main/default/objects/NXLIBS__ErrorData__c/NXLIBS__ErrorData__c.object-meta.xml
<CustomObject>
    <label>Error Data</label>
    <nameField>
        <displayFormat>ED-{0000000000}</displayFormat>
        <label>Error Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>