force-app/main/default/objects/NXLIBS__ErrorData__c/fields/NXLIBS__ExtId__c.field-meta.xml
<CustomField>
    <fullName>NXLIBS__ExtId__c</fullName>
    <externalId>true</externalId>
    <label>ExtId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>