force-app/main/default/objects/NXLIBS__ErrorData__c/fields/NXLIBS__ObjectType__c.field-meta.xml
<CustomField>
    <fullName>NXLIBS__ObjectType__c</fullName>
    <label>Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>