force-app/main/default/objects/NXLIBS__ErrorData__c/fields/NXLIBS__OperationType__c.field-meta.xml
<CustomField>
    <fullName>NXLIBS__OperationType__c</fullName>
    <label>Operation Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>