force-app/main/default/objects/NXLIBS__ErrorData__c/fields/NXLIBS__OriginalId__c.field-meta.xml
<CustomField>
    <fullName>NXLIBS__OriginalId__c</fullName>
    <label>Original Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>