force-app/main/default/objects/NXLIBS__ErrorData__c/fields/NXLIBS__OriginalRecord__c.field-meta.xml
<CustomField>
    <fullName>NXLIBS__OriginalRecord__c</fullName>
    <label>Original Record</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>