force-app/main/default/objects/NXLIBS__ErrorData__c/fields/NXLIBS__SFRecord__c.field-meta.xml
<CustomField>
    <fullName>NXLIBS__SFRecord__c</fullName>
    <label>SFRecord</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>