force-app/main/default/objects/NXLIBS__ErrorData__c/fields/RecordLink__c.field-meta.xml
<CustomField>
    <fullName>RecordLink__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; + NXLIBS__OriginalId__c,&quot;LinkRecord&quot;, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RecordLink</label>
    <type>Text</type>
</CustomField>