force-app/main/default/objects/NXLIBS__ErrorData__c/listViews/NXLIBS__All.listView-meta.xml
<ListView>
    <fullName>NXLIBS__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>